WIP towards final version

--- a/doc/h5wrapper/GettingStarted.ipynb
+++ b/doc/h5wrapper/GettingStarted.ipynb
@@ -6,7 +6,7 @@
     "tags": []
    },
    "source": [
-    "# Getting started\n",
+    "# Getting started: H5File\n",
     "\n",
     "The package `h5wrapper` adds general and application/domain-specific functionalities to the core interface HDF5 implemented in the package `h5py` (https://docs.h5py.org/en/stable/). This is done by providing so-calle wrapper classes. They\n",
     " - facilitate and streamline the work with HDF5 files and\n",
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h5 = h5tbx.H5File()\n",
+    "h5 = h5tbx.H5File()  # note, not passing `mode` while the filename does not exist: 'r+' is used, otherwise defaultis 'r'\n",
     "print(h5.hdf_filename.name)  # equal to h5.filename but a pathlib.Path and exists also after file is closed\n",
     "h5.close()"
    ]
@@ -174,9 +174,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h5tbx.H5File.Layout.dump()\n",
+    "h5tbx.H5File.layout.dump()\n",
     "print('---')\n",
-    "h5tbx.H5Flow.Layout.dump()"
+    "h5tbx.H5Flow.layout.dump()"
    ]
   },
   {
@@ -196,7 +196,7 @@
    "source": [
     "with h5tbx.H5File('test.hdf', mode='w') as h5:\n",
     "    h5.dump()\n",
-    "    print(h5.Layout.filename)"
+    "    print(h5.layout.filename)"
    ]
   },
   {
@@ -254,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h5tbx.H5File.Layout.dump()  # alternative: H5File.Layout.sdump()"
+    "h5tbx.H5File.layout.dump()  # alternative: H5File.Layout.sdump()"
    ]
   },
   {
@@ -263,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5tbx.H5File.Layout as l:\n",
+    "with h5tbx.H5File.layout.File() as l:\n",
     "    print(l.attrs.keys())"
    ]
   },
@@ -280,7 +280,7 @@
     "    test_filename = h5.filename  # or h5.hdf_filename\n",
     "\n",
     "with h5py.File(test_filename) as h5:\n",
-    "    h5tbx.H5File.Layout.check(h5, silent=False)"
+    "    h5tbx.H5File.layout.check(h5, silent=False)"
    ]
   },
   {
