--- a/doc/x2hdf/piv2hdf.ipynb
+++ b/doc/x2hdf/piv2hdf.ipynb
@@ -56,7 +56,86 @@
     " - netCDF4 files from PIVview (https://www.pivtec.com/pivview.html) and \n",
     " - text files from OpenPIV (http://www.openpiv.net/)\n",
     " \n",
-    "The tutorial module provides a sample result file:"
+    "The tutorial module provides a sample result file. We go thorugh converting the snapshot fo the openpiv example first:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87c2015e-8436-4ade-8b6c-f226adf76ccc",
+   "metadata": {},
+   "source": [
+    "### OpenPIV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2066bdf7-547e-4ebf-8a78-3b6e3cc82463",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the test file:\n",
+    "openpiv_txt_file = h5tbx.tutorial.OpenPIV.get_snapshot_txt_file()\n",
+    "openpiv_par_file = h5tbx.tutorial.OpenPIV.get_parameter_file()\n",
+    "\n",
+    "# init a openpiv-file instance:\n",
+    "openpiv_file = h5tbx.x2hdf.piv.openpiv.OpenPIVFile(openpiv_txt_file)\n",
+    "openpiv_file\n",
+    "\n",
+    "openpiv_snapshot = h5tbx.x2hdf.PIVSnapshot(openpiv_file, recording_time=0.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "608be737-ee8b-4aa7-80dc-8a37a9d8d98e",
+   "metadata": {},
+   "source": [
+    "Now we can write the data to an HDF file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19e3ffcc-0c72-4ac7-a421-c21979025939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylayout = h5tbx.conventions.layout.Layout(h5tbx.generate_temporary_filename())\n",
+    "print(mylayout.filename)\n",
+    "\n",
+    "with mylayout.File(mode='w') as h5:\n",
+    "    print(h5.mode)\n",
+    "    h5.attrs['title'] = '__any'\n",
+    "    # dsx = h5.create_dataset('x', shape=(1,))  # shape does not matter here, but has to be passed\n",
+    "    # dsx.attrs['standard_name.alt:long_name'] = '__any'\n",
+    "    # dsy = h5.create_dataset('y', shape=(1,))  # shape does not matter here, but has to be passed\n",
+    "    # dsy.attrs['standard_name.alt:long_name'] = '__any'\n",
+    "    # h5.create_group('meta')\n",
+    "    # h5.create_group('meta/other')\n",
+    "mylayout.dump()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af3609a4-a051-4e4c-a699-d19b1ff15d7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5tbx.H5PIV.Layout.filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb889047-23fd-41a0-9136-e3948f48bfd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdf_filename = openpiv_snapshot.to_hdf()\n",
+    "with h5tbx.H5PIV(hdf_filename) as h5:\n",
+    "    h5.dump(check=True)\n",
+    "    h5.u[:].plot()"
    ]
   },
   {
@@ -66,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nc_file = h5tbx.tutorial.PIVview.get_snapshot_nc_files()[0]"
+    "pivview_nc_file = h5tbx.tutorial.PIVview.get_snapshot_nc_files()[0]\n"
    ]
   },
   {
@@ -84,9 +163,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pivview_file = h5tbx.x2hdf.piv.pivview.PivViewNcFile(nc_file)\n",
+    "pivview_file = h5tbx.x2hdf.piv.pivview.PIVViewNcFile(pivview_nc_file, None)\n",
     "pivview_file"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6dd45f6-f50e-4429-b563-ed3ac5d501c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -95,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snapshot = h5tbx.x2hdf.PIVSnapshot(pivview_file, recording_time=0.)\n",
+    "snapshot_pivview = h5tbx.x2hdf.PIVSnapshot(pivview_file, recording_time=0.)\n",
     "# snapshot = h5tbx.x2hdf.PIVSnapshot.from_pivview(nc_file, 0.)"
    ]
   },
@@ -114,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdf_filename = snapshot.to_hdf()"
+    "hdf_filename = snapshot_pivview.to_hdf()"
    ]
   },
   {
@@ -161,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plane = h5tbx.x2hdf.PIVPlane.from_plane_folder(piv_folder, 5, h5tbx.x2hdf.piv.pivview.PivViewNcFile)"
+    "plane = h5tbx.x2hdf.PIVPlane.from_plane_folder(piv_folder, 5, h5tbx.x2hdf.piv.pivview.PIVViewNcFile)"
    ]
   },
   {
@@ -210,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plane_objs = [h5tbx.x2hdf.PIVPlane.from_plane_folder(d, 5, h5tbx.x2hdf.pivview.PivViewNcFile) for d in plane_dirs]"
+    "plane_objs = [h5tbx.x2hdf.PIVPlane.from_plane_folder(d, 5, h5tbx.x2hdf.pivview.PIVViewNcFile) for d in plane_dirs]"
    ]
   },
   {
@@ -249,6 +336,102 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7777c793-1c79-449f-8052-375b530c9a23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5tbx.x2hdf.piv.pivview.PIVviewParameterFile(h5tbx.tutorial.PIVview.get_parameter_file())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff0deb2f-4833-4387-95e4-f1fd7249c422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import configparser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "216ffe6f-fb47-4fdf-adff-bb5757621a43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg = configparser.ConfigParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce6f35bf-9a4c-468b-8f5d-74d6724c368e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg.read(h5tbx.tutorial.PIVview.get_parameter_file())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee348bbb-e6b9-41a3-9095-abc635570650",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "piv_dict = {}\n",
+    "for s in cfg.sections():\n",
+    "    print(s.strip('-').strip(' '))\n",
+    "    piv_dict[s.strip('-').strip(' ')] =  dict(cfg[s])\n",
+    "    # for k, v in dict(cfg[s]).items():\n",
+    "    #     print(f'{k}: {v}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04e28a67-a7ed-46c6-8de2-15f68d957029",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o = OpenPIVParameterFile.from_class(windef.Settings())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41724a2e-acee-4e01-ac27-0f207d971402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File('test.hdf', 'w') as h5:\n",
+    "    g = h5.create_group('piv_parameters')\n",
+    "    o.to_hdf(g)\n",
+    "    h5.dump()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce5d6fa3-fb92-42e3-8cdc-7491cd4cd949",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dc722dc-f1da-4353-9f3a-de96466cd645",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d619057-4dcb-4051-872e-f8dd7667b646",
    "metadata": {},
    "outputs": [],
    "source": []
