bugfixesand renamed Layout to H5Layout

--- a/doc/conventions/layouts.ipynb
+++ b/doc/conventions/layouts.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Layouts\n",
     "\n",
-    "With layouts, meta data of an HDF5 file can be defined."
+    "Layout in the context of this package describe the required content of a HDF file. A layout essentially is a HDF itself and is associates with a wrapper class, e.g. `H5File`. The idea behind defining layout is, that the data generation process is supervised. This means, when using `H5File` for filling an HDF5 file a `check()` method will tell, if the minimal required (meta) data has been written. A third user would then only accept the file if a check-run results in zero issues.\n",
+    "\n",
+    "The generation and usage of layouts is outlined in the following:"
    ]
   },
   {
@@ -25,17 +27,73 @@
    "id": "8c771d39-1ebc-4689-bbe4-17a5d139d87a",
    "metadata": {},
    "source": [
-    "Initialize a `H5FileLayout`:"
+    "The already implemented wrapper classes like e.g. `H5File` or `H5Flow` are already associated with layouts: "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b34bff5-8d7a-4f9a-b42d-81fc34b8b3cf",
+   "id": "4f3bf7f8-f8c4-4afe-bf7d-d44c3bb51804",
    "metadata": {},
    "outputs": [],
    "source": [
-    "h5tbx.generate_temporary_filename(suffix='.hdf')"
+    "with h5tbx.H5File() as h5:\n",
+    "    lay = h5.layout\n",
+    "    print(lay)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "966ecf93-4ce4-4ed0-94a1-029b9344ddd8",
+   "metadata": {},
+   "source": [
+    "As a `layout` is a HDF file itself, it has similar features like wrapper files, e.g. we can get a nice html representation of the content. Like this we can see what is required to have in any file written with `H5File`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b04b95b-ffd6-4f14-b820-9467b65b3c40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lay"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73c01175-9ca5-471a-97cb-fdb89eadb417",
+   "metadata": {},
+   "source": [
+    "## Check layout\n",
+    "Let's create an empty HDF5 file with `h5py`, thus no data will be available. If we then open it with a `H5File` wrapper, everything defined in the layout file is missing, hence, we expect 4 issues to raise:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a83cd128-d178-41e8-8337-ecd08931411a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "filename = h5tbx.generate_temporary_filename()\n",
+    "with h5py.File(filename, 'w'):\n",
+    "    pass\n",
+    "\n",
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    h5.check()\n",
+    "    print(h5.layout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f6d9a9b-b30d-49c4-811e-344c955a7cb2",
+   "metadata": {},
+   "source": [
+    "## Write an individual layout\n",
+    "\n",
+    "Layout file are HDF file, thus we need a filename an then initialize a `Layout` object:"
    ]
   },
   {
@@ -45,7 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mylayout = h5tbx.conventions.layout.Layout(h5tbx.generate_temporary_filename(suffix='.hdf'))"
+    "h5tbx.generate_temporary_filename(suffix='.hdf')\n",
+    "mylayout = h5tbx.conventions.H5Layout(h5tbx.generate_temporary_filename(suffix='.hdf'))\n",
+    "mylayout"
    ]
   },
   {
@@ -76,7 +136,7 @@
     "    dsy.attrs['standard_name.alt:long_name'] = '__any'\n",
     "    h5.create_group('meta')\n",
     "    h5.create_group('meta/other')\n",
-    "mylayout.dump()"
+    "mylayout"
    ]
   },
   {
@@ -94,7 +154,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5py\n",
     "test_filename = h5tbx.generate_temporary_filename()\n",
     "with h5py.File(test_filename, mode='w') as h5:\n",
     "    h5.attrs['title'] = 'my test file'\n",
@@ -122,6 +181,24 @@
     "with h5py.File(test_filename, mode='r') as h5:\n",
     "    mylayout.check(h5, silent=True)\n",
     "print(mylayout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "858f24e5-25db-4032-9682-5bdf2902d062",
+   "metadata": {},
+   "source": [
+    "But what exactly is missing? Either change the parameter `silentTrue` to `silent=False` ot run `report()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "837d8626-4c09-4e4c-97fb-4c4ce874d71d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylayout.report()"
    ]
   },
   {
