--- a/doc/gettingstarted/quickoverview.ipynb
+++ b/doc/gettingstarted/quickoverview.ipynb
@@ -21,7 +21,7 @@
    "id": "e3d38b11-9866-4d04-ae68-2354cf992ac1",
    "metadata": {},
    "source": [
-    "Import the package and use the recommended abbreviation `h5tbx`. We also will need `numpy`:"
+    "Import the package and use the recommended abbreviation ``h5tbx``. We also will need `numpy`:"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "metadata": {},
    "source": [
     "## Natural Naming\n",
-    "Until here we used the conventional way of addressing variables and groups in a dictionary-like style. `h5RDMtoolbox` llows to use \"natural naming\" which means that we can address those objects as if they were attributes:"
+    "Until here we used the conventional way of addressing variables and groups in a dictionary-like style. `h5RDMtoolbox` allows to use \"natural naming\" which means that we can address those objects as if they were attributes:"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
