--- a/doc/h5wrapper/GettingStarted.ipynb
+++ b/doc/h5wrapper/GettingStarted.ipynb
@@ -163,26 +163,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Moreover, a certain **Layout** may be defined along with a wrapper class, e.g. `H5Flow` expects one-dimensional `x`, `y` and `z` datasets with units `m`. The wrapper-class `H5File` expects a file to have a `title` as one of the root attributes among other mandatory attributes. There may even be conditional layout restrictions that are considered based on specific user choices.\n",
-    "\n",
-    "Let's have a look, how the layout file of `H5File` and `H5Flow` look like:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5tbx.H5File.layout.dump()\n",
-    "print('---')\n",
-    "h5tbx.H5Flow.layout.dump()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---\n",
     "## File creation\n",
     "File creation as used to with `h5py` either with or without defining a filename (when passing no (file)name, write intent is automatically set to 'r+'). If no filename is set, a temporary file is created in a tmp-folder. You may also set the attribute `title` by passing it as parameter during initialization:"
@@ -254,50 +234,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h5tbx.H5File.layout.dump()  # alternative: H5File.Layout.sdump()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with h5tbx.H5File.layout.File() as l:\n",
-    "    print(l.attrs.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import h5py\n",
     "with h5py.File(h5tbx.generate_temporary_filename(suffix='.hdf'), 'w') as h5:\n",
     "    h5.attrs['title'] = 'Tutorial data'\n",
     "    h5.attrs['__version__'] = '0.1.12'\n",
     "    test_filename = h5.filename  # or h5.hdf_filename\n",
     "\n",
-    "with h5py.File(test_filename) as h5:\n",
-    "    h5tbx.H5File.layout.check(h5, silent=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Calling `check()` will perform both dynamic and static check."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with h5tbx.H5File(test_filename) as h5:\n",
-    "    h5.check()"
+    "    h5.check(silent=False)"
    ]
   },
   {
