--- a/doc/x2hdf/piv2hdf.ipynb
+++ b/doc/x2hdf/piv2hdf.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mylayout = h5tbx.conventions.layout.Layout(h5tbx.generate_temporary_filename())\n",
+    "mylayout = h5tbx.conventions.H5Layout(h5tbx.generate_temporary_filename())\n",
     "print(mylayout.filename)\n",
     "\n",
     "with mylayout.File(mode='w') as h5:\n",
@@ -113,16 +113,6 @@
     "    # h5.create_group('meta')\n",
     "    # h5.create_group('meta/other')\n",
     "mylayout.dump()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af3609a4-a051-4e4c-a699-d19b1ff15d7c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5tbx.H5PIV.Layout.filename"
    ]
   },
   {
@@ -329,7 +319,8 @@
    "outputs": [],
    "source": [
     "with h5tbx.H5PIV(hdf_filename, 'r') as h5piv:\n",
-    "    h5piv.dump()"
+    "    h5piv.dump()\n",
+    "    h5piv.check(silent=False)"
    ]
   },
   {
@@ -392,46 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04e28a67-a7ed-46c6-8de2-15f68d957029",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "o = OpenPIVParameterFile.from_class(windef.Settings())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41724a2e-acee-4e01-ac27-0f207d971402",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with h5tbx.H5File('test.hdf', 'w') as h5:\n",
-    "    g = h5.create_group('piv_parameters')\n",
-    "    o.to_hdf(g)\n",
-    "    h5.dump()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce5d6fa3-fb92-42e3-8cdc-7491cd4cd949",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8dc722dc-f1da-4353-9f3a-de96466cd645",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d619057-4dcb-4051-872e-f8dd7667b646",
+   "id": "a11f9fd4-a578-489d-a389-7d69319043a0",
    "metadata": {},
    "outputs": [],
    "source": []
