--- a/doc/x2hdf/piv2hdf.ipynb
+++ b/doc/x2hdf/piv2hdf.ipynb
@@ -82,7 +82,7 @@
     "openpiv_file = h5tbx.x2hdf.piv.openpiv.OpenPIVFile(openpiv_txt_file)\n",
     "openpiv_file\n",
     "\n",
-    "openpiv_snapshot = h5tbx.x2hdf.PIVSnapshot(openpiv_file, recording_time=0.)"
+    "openpiv_snapshot = h5tbx.x2hdf.piv.PIVSnapshot(openpiv_file, recording_time=0.)"
    ]
   },
   {
@@ -160,19 +160,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6dd45f6-f50e-4429-b563-ed3ac5d501c9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "71690884-95e7-4563-b0ce-f84361f16e03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "snapshot_pivview = h5tbx.x2hdf.PIVSnapshot(pivview_file, recording_time=0.)\n",
+    "snapshot_pivview = h5tbx.x2hdf.piv.PIVSnapshot(pivview_file, recording_time=0.)\n",
     "# snapshot = h5tbx.x2hdf.PIVSnapshot.from_pivview(nc_file, 0.)"
    ]
   },
@@ -238,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plane = h5tbx.x2hdf.PIVPlane.from_plane_folder(piv_folder, 5, h5tbx.x2hdf.piv.pivview.PIVViewNcFile)"
+    "plane = h5tbx.x2hdf.piv.PIVPlane.from_plane_folder(piv_folder, 5, h5tbx.x2hdf.piv.pivview.PIVViewNcFile)"
    ]
   },
   {
@@ -287,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plane_objs = [h5tbx.x2hdf.PIVPlane.from_plane_folder(d, 5, h5tbx.x2hdf.pivview.PIVViewNcFile) for d in plane_dirs]"
+    "plane_objs = [h5tbx.x2hdf.piv.PIVPlane.from_plane_folder(d, 5, h5tbx.x2hdf.piv.PIVViewNcFile) for d in plane_dirs]"
    ]
   },
   {
@@ -297,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mplane = h5tbx.x2hdf.PIVMultiPlane(plane_objs)"
+    "mplane = h5tbx.x2hdf.piv.PIVMultiPlane(plane_objs)"
    ]
   },
   {
@@ -322,71 +314,6 @@
     "    h5piv.dump()\n",
     "    h5piv.check(silent=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7777c793-1c79-449f-8052-375b530c9a23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5tbx.x2hdf.piv.pivview.PIVviewParameterFile(h5tbx.tutorial.PIVview.get_parameter_file())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff0deb2f-4833-4387-95e4-f1fd7249c422",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import configparser"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "216ffe6f-fb47-4fdf-adff-bb5757621a43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cfg = configparser.ConfigParser()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce6f35bf-9a4c-468b-8f5d-74d6724c368e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cfg.read(h5tbx.tutorial.PIVview.get_parameter_file())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee348bbb-e6b9-41a3-9095-abc635570650",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "piv_dict = {}\n",
-    "for s in cfg.sections():\n",
-    "    print(s.strip('-').strip(' '))\n",
-    "    piv_dict[s.strip('-').strip(' ')] =  dict(cfg[s])\n",
-    "    # for k, v in dict(cfg[s]).items():\n",
-    "    #     print(f'{k}: {v}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a11f9fd4-a578-489d-a389-7d69319043a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
