--- a/doc/h5wrapper/SpecializedWrappers.ipynb
+++ b/doc/h5wrapper/SpecializedWrappers.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e0c92dc-7de4-43fd-b431-e853b2200145",
+   "id": "baf43fc3-c223-40b8-8949-b247a2883b85",
    "metadata": {},
    "source": [
-    "# H5Flow\n",
+    "# Specialized Wrappers\n",
+    "\n",
+    "By inheriting the main wrapper class `H5File` domain-specific functionality can be added. Although properties can be registered, it can be worth the effort of inheriting the class to permanently add features to it.\n",
+    "\n",
+    "The package provides two such class:\n",
+    "- `H5Flow` and \n",
+    "- `h5PIV`\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba4a8bd5-eb20-42c1-a365-4d84043137f6",
+   "metadata": {},
+   "source": [
+    "## H5Flow\n",
     "\n",
     "To enhance the work with fluid-related HDF5 datasts, `H5Flow` is implemented, which is inherited from `H5File`. Thus, all features plus the domain specific one, that will be outlined here, are available.\n",
     "\n",
@@ -15,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c23bbbc-8538-435f-93c1-5c564e820146",
+   "id": "9cbf2d86-3ed6-443c-a9e5-47ca2c242317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,18 +40,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "80b53868-1379-48a3-949a-0b4910789c38",
-   "metadata": {},
-   "source": [
-    "Let's start from scratch and fill an HDF file with simple random data. To do so quickly, two methods of `H5Flow` can help: `create_coordinates()` and `create_velocity_datasets()`."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d9d39b4-e31b-4450-82e1-2ac58580339c",
-   "metadata": {},
+   "id": "cf5b4200-7b82-4066-a975-423778ebe9ca",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "with h5tbx.H5Flow() as h5:\n",
@@ -54,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a38d0bbe-7ea3-479c-a0b1-f4ed0d04b094",
+   "id": "611871a0-44f5-4074-ab1c-db78d0d76a7d",
    "metadata": {},
    "source": [
     "## Accessing vector data\n",
@@ -65,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46ace215-d100-40a4-b02d-3d5187fa6345",
+   "id": "9ab9b5c3-7d63-4ea3-9c2e-71fff0d3307d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ed142f9-3d38-4211-ae59-a84069faa648",
+   "id": "4b8ea821-e50e-43fc-a161-c0363e72a475",
    "metadata": {},
    "source": [
     "A `xr.Dataset` is received, which we can work on, e.g. compute the magnitude and plot it:"
@@ -85,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc5a8616-da7c-439b-858e-7709eecf2b37",
+   "id": "c6f2c7dc-a8c0-4c6d-be1f-fd7de3f26e2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b08a3bd5-3303-4cf4-9040-c9687f66fdcd",
+   "id": "a0b6724a-129a-4299-9a7c-161c25ca4264",
    "metadata": {},
    "source": [
     "As seen, the vector components can be addressed passing the keyword `names` in the call-statement. We could also use the keyword `standard_name`.\n",
@@ -105,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc400f98-3174-4ded-b6f0-4bf9f3dd9da8",
+   "id": "d2fc2956-2fe6-438e-a9f3-1b11e8e89271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d7c0130-265e-471a-9809-b85ea6fce234",
+   "id": "77788005-93e7-4e1a-8011-7b05431c2d2c",
    "metadata": {},
    "source": [
     "## Connecting datast to a devices\n",
@@ -126,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc0177e5-241b-4944-8bad-817933c7ef3c",
+   "id": "b1caf163-9aed-496d-ada8-1ac02f6b04f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fca1618-6963-4826-8ac9-252b62d4de7c",
+   "id": "7e304651-6b5a-481b-9876-04ab88dbba0d",
    "metadata": {},
    "source": [
     "**Alternative 1:** We can first use the `Device` class to create an object, which we write to the hdf group and then create the reference:"
@@ -154,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97db1151-baed-482d-8970-f3a61c40e573",
+   "id": "2a127c86-a43c-443d-92dc-c3bbf6a516e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c03a4ce4-49e9-4656-b53d-f6633cc2daec",
+   "id": "72593880-6444-4e2b-b991-2302e15a4ea4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d30895bb-8e00-4747-ac87-b5b9f876ae6a",
+   "id": "e188c606-9e9e-491e-a564-fe4b0c04095a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,181 +207,211 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cf61dba-eb25-48d8-a496-f650e4321ce8",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Create two flow types (Poiseuille and rankine vortex)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "108eeb31-8b48-460f-8a64-e82b8a256240",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vel_couette = h5tbx.tutorial.get_xr_dataset('couette2d')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "774051d7-587b-41c3-8db1-f00dc647b1b0",
+   "id": "973f2e27-a98f-433c-b862-de950ba36ccf",
    "metadata": {},
    "source": [
-    "The above variables are of type `xarray.Dataset`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c37c1df-eb80-4f27-a893-fc7fd1bff6f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vel_couette"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13dd7b3f-a4b1-42cd-9c86-069062da1dd3",
-   "metadata": {},
-   "source": [
-    "The velocity component can directly be plotted with coorect units at the labels:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e1f6aad-2358-47b3-ab17-30bfb084de2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vel_couette.u.plot()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "989792eb-b898-497b-8d8b-c99717d591a2",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Add both flow types to individual groups\n",
+    "---\n",
+    "## H5PIV\n",
     "\n",
-    "A `xarray.Dataset` can be stored in an HDF file as done in the following:"
+    "Velocity is a vector quantity. In the HDF file each component generally is stored as an individual data variable. To get the full vector in one variable the attribute `VelocityVector` can be called. Slicing this object will assigned it with the respectve arrays from the HDF datasets. In this case x- and y-velociy datasets are siced and merged into a `xr.Dataset`. The `VelocityVector` class is wrapped around the `xr.Dataset` class and has additional methods, like `compute_magnitude()`.\n",
+    "\n",
+    "Note, that `VelocityVector` is not a property of `H5PIV` by default but is added afterwards, similar to how dataarray-ccessors are added to an `xr.DataArray`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc42ec59-e89b-4ed2-9c20-f3e51b2809ed",
+   "id": "6547baf5-d41f-4a4f-8369-6ee838b54103",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vel_poiseuille = h5tbx.tutorial.get_xr_dataset('poiseuille2D')\n",
-    "vel_poiseuille"
+    "with h5tbx.tutorial.get_H5PIV('minimal_flow', mode='r') as h5:\n",
+    "    h5.dump()\n",
+    "    vel = h5.VelocityVector[:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d50bea0d-8053-419c-b7a6-c220d5fc1a87",
+   "metadata": {},
+   "source": [
+    "### Post-processing with `H5PIV`\n",
+    "\n",
+    "Based on standard names velocity, velocity gradients and other variables are identified. Each group therefore should have only one velocity vector, otherwise it is not clear from which to compute e.g. the turbulent kinetic energy.<br>\n",
+    "From each group, multiple fluid-specific post-processing methods can be called. They store the result in the respective group if required data was correcly identified:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00dae05f-5625-41ac-bdc3-1a3450310463",
+   "id": "7e1f3b2e-5d5c-45c2-882b-bffee7fd24e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5tbx.H5Flow(mode='w') as h5:\n",
-    "    h5.create_dataset('vel', data=[1,2,3], standard_name='x_velocity', units='m/s')\n",
-    "    print(type(h5.vel.standard_name))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caa1b140-91a6-46e4-984b-350c84d5f964",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with h5tbx.H5Flow(mode='w') as h5:\n",
-    "    grp1 = h5.create_group('couette', long_name='couette group')\n",
-    "    grp1.create_dataset_from_xarray_dataset(vel_couette)    \n",
-    "    \n",
-    "    grp2 = h5.create_group('poiseuille', long_name='poiseuille group')\n",
-    "    grp2.create_dataset_from_xarray_dataset(vel_poiseuille)\n",
-    "    hdf_filename = h5.hdf_filename\n",
-    "    \n",
-    "    u = h5.couette.u[:]\n",
-    "    h5.couette.mag[:].plot()\n",
-    "    print(h5.couette.u.__repr__())\n",
-    "    \n",
+    "with h5tbx.tutorial.get_H5PIV('vortex_snapshot', mode='r+') as h5:\n",
     "    h5.dump()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ca959830-fede-47d4-9997-e67cd84b54a5",
+   "id": "c52700ee-0fcf-4973-9ddc-cd9d509340e3",
    "metadata": {},
    "source": [
-    "A `xarray.Dataset` can be created from the hdf file to get the velocity components within one dataset:"
+    "## Computing PIV uncertainty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8860ffb2-55d7-43aa-b4fc-24e3b1175967",
+   "metadata": {},
+   "source": [
+    "Get an example HDF filename from the ILA vortex pair example (https://www.pivtec.com/pivview.html):\n",
+    "\n",
+    "To compute the uncertainty of a PIV measurement, we need to gather some specific datasets, namely the at minimum the pixel coordinates, the displacements and the raw images. The class property `UncertaintyDataset` does this for us. Calling it will return a `xarray.Dataset` with the displacement variables.\n",
+    "\n",
+    "Let's load the vortex example and fetch image A and imabe B:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b592d0-fa92-4764-b182-f6f647556f99",
+   "id": "2e5b6e2e-685a-4460-a4f9-7c47df916527",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5tbx.H5Flow(hdf_filename, mode='r') as h5:\n",
+    "with h5tbx.tutorial.get_H5PIV('vortex_snapshot', 'r+') as h5:\n",
+    "    disp = h5.DisplacementVector[:,:]\n",
+    "    imgA = h5.imgA[:,:]\n",
+    "    imgB = h5.imgB[:,:]\n",
+    "disp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb7cc1b0-4fe4-48f0-96f4-b02a72e7b253",
+   "metadata": {},
+   "source": [
+    "The uncertainty dataset has the coordinates `x` and `y`, the displacements arrays `dx` and `dy` but also the pixel coordinates `ix` and `iy`\n",
+    "\n",
+    "Next, let's create a more or less random uncertainty method. In this example we do not compute the real error but assume one, just to explain the workflow of cumputing the uncertainty from the dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3625b6b5-4dba-419a-ada2-3e0c01e1f7d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_uncertainty_method(uds, imgA, imgB):\n",
+    "    \"\"\"\n",
+    "    Dummy uncertainty method for this tutorial.\n",
+    "    Returns the same dataset but with added uncertainties\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    uds: XRUncertaintyDataset\n",
+    "        The uncertainty dataset containing, x, y, ix, iy, dx, dy, ...\n",
+    "    imgA: np.ndarray\n",
+    "        2d PIV image A. Will not be touch in this example\n",
+    "    imgB: np.ndarray\n",
+    "        2d PIV image B. Will not be touch in this example\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    uds: XRUncertaintyDataset    \n",
+    "    \"\"\"\n",
+    "    import xarray as xr\n",
+    "    xerr = 0.05\n",
+    "    yerr = 0.075\n",
+    "    udx = np.abs(uds.dx)*xerr\n",
+    "    uds['udx'] = xr.DataArray(dims=uds.dx.dims, data=udx,\n",
+    "                                        attrs={'standard_name': f'uncertainty_of_{uds.dx.standard_name}',\n",
+    "                                               'units': 'pixel',\n",
+    "                                               'piv_uncertainty_method': 'my_uncertainty_method'})\n",
+    "    udy = np.abs(uds.dy)*yerr\n",
+    "    uds['udy'] = xr.DataArray(dims=uds.dy.dims, data=udy,\n",
+    "                                        attrs={'standard_name': f'uncertainty_of_{uds.dy.standard_name}',\n",
+    "                                               'units': 'pixel',\n",
+    "                                               'piv_uncertainty_method': 'my_uncertainty_method'})\n",
+    "    return uds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f05f7324-3ea4-468b-b967-978e712295c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "un = disp.compute_uncertainty(my_uncertainty_method, imgA, imgB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1ba5274-828d-4c9f-9672-afec8c1dbfd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "un.compute_magnitude()\n",
+    "_ = un.magnitude[:].plot.contourf(vmax=6, vmin=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d56e337f-a998-4341-b4ac-fff1c14e1191",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "udx = un.get_by_standard_name('uncertainty_of_x_displacement')\n",
+    "_ = udx.where(np.abs(udx) < 20).plot.contourf()\n",
+    "print(f'Error in x-direction: {udx.mean().values}')\n",
+    "print(f'Absolute relative error in x-direction: {np.divide(udx, np.abs(un.dx)).mean().values}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07657666-4b2c-41ba-ac8d-b03bc9e95585",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5tbx.conventions.identifier.STRICT = False\n",
+    "# uncertainty_of_x_displacement is not part of the standard name table at this moment. \n",
+    "# Don't check if standard names are in the respective table. this can be done by diabeling the \"strictness\" of checking standard names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a2e58ce-a211-421d-a010-bf7f574d4189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5PIV(h5.hdf_filename, 'r+') as h5:\n",
+    "    h5.create_group('uncertainty', overwrite=True)\n",
+    "    h5['uncertainty'].create_dataset('delta_dx', data=un.get_by_standard_name('uncertainty_of_x_displacement'), overwrite=True)\n",
+    "    h5['uncertainty'].create_dataset('delta_dy', data=un.get_by_standard_name('uncertainty_of_x_displacement'), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6b0fc38-7da4-494f-891c-2db252720a0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5PIV(h5.hdf_filename, 'r+') as h5:\n",
     "    h5.dump()\n",
-    "    vel = h5.couette.VelocityVector(standard_names=('x_velocity', 'y_velocity'))[:, :]"
+    "    h5.uncertainty.delta_dx[:,:].plot()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcf41013-cb84-4e2d-b9d8-6c741f0d86da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a044b20-f24a-43e5-8472-57003dc7b950",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vel.u.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b82a0694-12a8-4246-a0ea-b3ae70233fcd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u = vel.u[0,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "729430df-870e-4b54-a128-c9fcca08ea56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u.coords['y'].attrs.get('standard_name')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ef36053-5f73-4997-840b-f1faccd4e569",
+   "id": "5b1bf800-1029-4945-b453-136888dd6090",
    "metadata": {},
    "outputs": [],
    "source": []
