--- a/docs/h5wrapper/SpecializedWrappers.ipynb
+++ b/docs/h5wrapper/SpecializedWrappers.ipynb
@@ -10,8 +10,8 @@
     "By inheriting the main wrapper class `H5File` domain-specific functionality can be added. Although properties can be registered, it can be worth the effort of inheriting the class to permanently add features to it.\n",
     "\n",
     "The package provides two such class:\n",
-    "- `H5Flow` and \n",
-    "- `h5PIV`\n",
+    " - `H5Flow` and \n",
+    " - `H5PIV`\n",
     "\n",
     "---"
    ]
