--- a/docs/h5wrapper/NaturalNaming.ipynb
+++ b/docs/h5wrapper/NaturalNaming.ipynb
@@ -7,20 +7,17 @@
     "tags": []
    },
    "source": [
-    "# Natural Naming"
+    "# Natural Naming\n",
+    "\n",
+    "`h5RDMtoolbox` supports attribute style access (natural naming) on datasets, groups and attributes instead of the known dictionary style. This means that HDF objects must not be named as existing attributes of used instances, e.g. `H5File`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "97f1f3a5-5f93-4e1b-b7a4-e3d9b296dd00",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-12T13:19:49.438368Z",
-     "iopub.status.busy": "2022-08-12T13:19:49.438368Z",
-     "iopub.status.idle": "2022-08-12T13:19:51.227000Z",
-     "shell.execute_reply": "2022-08-12T13:19:51.227000Z"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -28,16 +25,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c18d75cd-6d5b-4a32-add1-a068a03f563b",
+   "metadata": {},
+   "source": [
+    "You can enable natural naming by the following line. However, `True` is the default."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
+   "id": "44fc86eb-608d-4254-873d-6d4dabd74997",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5tbx.config.natural_naming = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "c5b94c36-c5c2-4c09-b5a8-a4a45ccd401e",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-12T13:19:51.230004Z",
-     "iopub.status.busy": "2022-08-12T13:19:51.230004Z",
-     "iopub.status.idle": "2022-08-12T13:19:51.242011Z",
-     "shell.execute_reply": "2022-08-12T13:19:51.242011Z"
-    }
+    "tags": []
    },
    "outputs": [
     {
@@ -49,15 +59,58 @@
       "shape:         (3,)\n",
       "long_name:     pressure\n",
       "standard_name: None\n",
-      "units:         Pa\n"
+      "units:         Pa\n",
+      "me\n"
      ]
     }
    ],
    "source": [
     "with h5tbx.H5File() as h5:\n",
-    "    ds = h5.create_dataset('test', shape=(3,), units='Pa', long_name='pressure')\n",
-    "    print(h5.test)"
+    "    ds = h5.create_dataset('test', shape=(3,), units='Pa', long_name='pressure', attrs={'user': 'me'})\n",
+    "    print(h5.test)\n",
+    "    print(ds.attrs.user)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b2d56e3a-78d8-4149-94dc-1377a0bd0cd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5tbx.config.natural_naming = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8e030d3d-b0f7-4cb6-b473-d337724953ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'H5File' object has no attribute 'test'\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5tbx.H5File() as h5:\n",
+    "    ds = h5.create_dataset('test', shape=(3,), units='Pa', long_name='pressure', attrs={'user': 'me'})\n",
+    "    try:\n",
+    "        print(h5.test)\n",
+    "    except AttributeError as e:\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c6a1de9-e694-4a43-a05f-3d8a8fdbad5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
