--- a/docs/h5database/h5mongo.ipynb
+++ b/docs/h5database/h5mongo.ipynb
@@ -70,6 +70,7 @@
     "        filenames.append(h5.hdf_filename)\n",
     "        h5.attrs['username'] = username\n",
     "        h5.attrs['company'] = company\n",
+    "        h5.attrs['adict'] = {'day': 'monday', 'iday': 0}\n",
     "        g = h5.create_group('idgroup')\n",
     "        g.attrs['id'] = i"
    ]
@@ -128,6 +129,19 @@
    "metadata": {},
    "source": [
     "Let's do the equivalent filter request as before (`sub_repo = repo.filter(Entry['/operation_point'].attrs['long_name'] == 'Operation point data group')`)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b405c1ad-7ee8-4087-afaf-5ffdcbea3503",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "res = collection.find({})\n",
+    "for r in res.rewind():\n",
+    "    pprint(r)"
    ]
   },
   {
