redone dicitionary unfolding. pymongo can search in dicts...

--- a/docs/h5database/h5mongo.ipynb
+++ b/docs/h5database/h5mongo.ipynb
@@ -70,7 +70,7 @@
     "        filenames.append(h5.hdf_filename)\n",
     "        h5.attrs['username'] = username\n",
     "        h5.attrs['company'] = company\n",
-    "        h5.attrs['adict'] = {'day': 'monday', 'iday': 0}\n",
+    "        h5.attrs['meta'] = {'day': 'monday', 'iday': 0}\n",
     "        g = h5.create_group('idgroup')\n",
     "        g.attrs['id'] = i"
    ]
@@ -97,7 +97,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "921d047f-6b02-4153-90e6-941165600dae",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "for fname in filenames:\n",
@@ -207,6 +209,36 @@
    "source": [
     "collection.count_documents({})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a688e249-70ec-4670-a2eb-1fdb2b081c83",
+   "metadata": {},
+   "source": [
+    "You can also search for an entry within the meta-dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaa1affc-b481-47eb-9774-db536c609e1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "res = collection.find({'meta.day': \"monday\"})\n",
+    "for r in res.rewind():\n",
+    "    pprint(r)\n",
+    "collection.count_documents({'meta.day': \"monday\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1016a14e-a76b-4ca4-80f8-29a34ff317e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
